added unit tests updated files